--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -1,6 +1,9 @@
 .mt-12 {
   margin-top: 12px;
 }
+.ml-12 {
+  margin-left: 12px;
+}
 .mt-24 {
   margin-top: 24px;
 }
@@ -15,4 +18,10 @@
 }
 .wrap {
   flex-wrap: wrap;
+}
+.ai-c {
+  align-items: center;
+} 
+.jc-sb {
+  justify-content: space-between;
 }
