--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -1,11 +1,23 @@
 .mt-12 {
   margin-top: 12px;
 }
+.mt-14 {
+  margin-top: 14px;
+}
+.mt-16 {
+  margin-top: 16px;
+}
 .ml-12 {
   margin-left: 12px;
 }
 .mt-24 {
   margin-top: 24px;
+}
+.mr-12 {
+  margin-right: 12px;
+}
+.mr-16 {
+  margin-right: 12px;
 }
 .mr-24 {
   margin-right: 24px;
