--- a/src/assets/styles/variable.css
+++ b/src/assets/styles/variable.css
@@ -14,6 +14,7 @@
   --bg_tbbody: #F5F8FC; /* 表格斑马纹 */
   --bg_tbhead: #E7EDF2; /* 表格头 */
   --brand-blue: #057BFF; /* 品牌色蓝色 */
+  --el-color-primary: #057BFF; /* 品牌色蓝色 */
   --brand_deep: #005BB8; /* 品牌色深蓝 */
   --brand_hover: #006CDF; /* 蓝色侧边栏选中 */
   --font-anti: #FFFFFF; /* 文字反白 */
