--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -1,45 +1,54 @@
 .mt-12 {
-  margin-top: 12px;
+	margin-top: 12px;
 }
 .mt-14 {
-  margin-top: 14px;
+	margin-top: 14px;
 }
 .mt-16 {
-  margin-top: 16px;
+	margin-top: 16px;
 }
 .ml-12 {
-  margin-left: 12px;
+	margin-left: 12px;
 }
 .mt-6 {
-  margin-top: 6px;
+	margin-top: 6px;
+}
+.mt-9 {
+	margin-top: 9px;
 }
 .mt-16 {
-  margin-top: 16px;
+	margin-top: 16px;
 }
 .mt-24 {
-  margin-top: 24px;
+	margin-top: 24px;
 }
 .mr-16 {
-  margin-right: 16px;
+	margin-right: 16px;
 }
 .mr-12 {
-  margin-right: 12px;
+	margin-right: 12px;
 }
 .mr-24 {
-  margin-right: 24px;
+	margin-right: 24px;
 }
 .flex {
-  display: flex;
+	display: flex;
 }
 .flex-1 {
-  flex: 1;
+	flex: 1;
+}
+.flex-2 {
+	flex: 2;
+}
+.flex-4 {
+	flex: 4;
 }
 .wrap {
-  flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 .ai-c {
-  align-items: center;
+	align-items: center;
 }
 .jc-sb {
-  justify-content: space-between;
+	justify-content: space-between;
 }
