--- a/src/assets/styles/element.custom.less
+++ b/src/assets/styles/element.custom.less
@@ -1,17 +1,36 @@
 // 更改表格头背景色和字体
 .el-table .el-table__header thead tr th {
-	background-color: var(--bg_tbhead);
-	font-size: 13px;
-	font-weight: 600;
-	color: var(--font-primary);
+  background-color: var(--bg_tbhead);
+  font-size: 13px;
+  font-weight: 600;
+  color: var(--font-primary);
 }
 // 表格内的基础字号和颜色
 .el-table td {
-	font-size: 13px;
-	color: var(--font-secondary);
+  font-size: 13px;
+  color: var(--font-secondary);
 }
 // el-form的label的颜色和字号
 .el-form .el-form-item__label {
-	font-size: 14px;
-	color: var(--font-primary);
+  font-size: 14px;
+  color: var(--font-primary);
+}
+// el-dialog统一样式
+div.el-dialog {
+  header.el-dialog__header {
+    background-color: var(--bg-rest);
+    padding: 15px 20px;
+    margin: 0;
+    .el-dialog__title {
+      color: var(--font-primary);
+      font-size: 16px;
+      font-weight: 500;
+    }
+    .el-dialog__headerbtn {
+      top: 0;
+    }
+  }
+  div.el-dialog__body {
+    padding: 20px;
+  }
 }
