--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -14,6 +14,9 @@
 .ml-2 {
   margin-left: 2px;
 }
+.ml-8 {
+  margin-left: 8px;
+}
 .ml-12 {
   margin-left: 12px;
 }
@@ -72,6 +75,9 @@
 .wrap {
   flex-wrap: wrap;
 }
+.nowrap {
+  flex-wrap: nowrap;
+}
 .ai-c {
   align-items: center;
 }
@@ -84,6 +90,9 @@
 .col {
   flex-direction: column;
 }
+shrink-0 {
+  flex-shrink: 0;
+}
 /* 字体颜色相关 */
 .c-font-primary {
   color: var(--font-primary);
@@ -93,4 +102,12 @@
 }
 .c-font-hint {
   color: var(--font-hint);
+}
+/* 省略 */
+.ellipsis-1 {
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
+  word-break: break-all;
 }
