--- a/src/components/biz/GroupSelector/components/CustomSelector/index.less
+++ b/src/components/biz/GroupSelector/components/CustomSelector/index.less
@@ -1,56 +1,59 @@
 :deep(.el-tree-node__content) {
-  &:hover .icon {
-    color: #fff;
-  }
-
   & > .el-tree-node__expand-icon {
-    visibility: hidden;
+    //display: none;
   }
 }
 
 :deep(.el-tree) {
   //padding: 10px 0;
   margin-right: 0;
+  .el-checkbox:last-of-type{
+    margin-right: 8px;
+  }
 }
 
 :deep(.el-tree-node) {
   &:focus > .el-tree-node__content {
     .icon {
-      color: #fff;
+      color: var(--font-anti);
     }
   }
 }
 
 .container {
-  padding-top: 10px;
+  padding: 12px;
 
   .scroll {
     overflow-y: auto;
-    background: #fff;
+    background: var(--bg-white);
   }
 }
 
+.search{
+  padding-bottom: 10px;
+}
+
 .tabView {
-  display: flex;
-  background: #f2f2f2;
-  height: 30px;
-  border-radius: 15px;
-  width: 100%;
-  line-height: 30px;
+    padding: 0 12px;
+  box-sizing: border-box;
   font-size: 14px;
-  color: #333;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  color: var(--font-secondary);
+  border-bottom: 1px solid var(--line-rest);
   overflow: hidden;
 
   .tabItem {
-    flex: 1;
+    display: inline-block;
     cursor: pointer;
-    text-align: center;
+    margin-right: 30px;
+    padding: 8px 0;
 
     &.current {
-      background: #328bef;
-      color: #fff;
+      font-weight: 500;
+      color: var(--brand-blue);
+      border-bottom: 2px solid var(--brand-blue);
+    }
+    &:last-child{
+      margin-right: 0;
     }
   }
 }
@@ -83,24 +86,17 @@
   }
 }
 
-.content {
-  padding: 10px 0;
-  background: #fff;
-
-  /deep/ .el-checkbox__input.is-checked + .el-checkbox__label {
-    color: #328bef !important;
-  }
-
-  /deep/ .el-checkbox {
-    padding: 4px 10px;
+.checkbox-content {
+  :deep(.el-checkbox) {
+    display: flex;
+    padding: 0 10px;
     margin-right: 0;
     &:hover {
-      background: #328bef;
-      color: #fff;
-      .el-checkbox__label {
-        color: #fff !important;
-      }
+      background: var(--bg-searchbar);
     }
+  }
+  :deep(.el-checkbox__input.is-checked+.el-checkbox__label) {
+    color: inherit;
   }
 }
 
