--- a/src/assets/styles/framework.less
+++ b/src/assets/styles/framework.less
@@ -15,7 +15,7 @@
   cursor: pointer;
 
   &.plain {
-    background-color: var(--bg-white);
+    background-color: transparent;
     color: var(--brand-blue);
     border: 1px solid var(--brand-blue);
   }
